[package]
name = "once_mut"
version = "0.1.0"
edition = "2021"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
description = "Safe mutable reference to static variable that can be obtained only once"
documentation = "https://docs.rs/ringbuf"
homepage = "https://github.com/agerasev/once_mut"
repository = "https://github.com/agerasev/once_mut.git"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["static", "lazy", "once", "mutable", "mut"]
categories = ["concurrency", "data-structures", "no-std"]
