[package]
name = "lock-free-static"
version = "0.1.0-rc.0"
edition = "2021"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
description = "Lock-free static variables"
documentation = "https://docs.rs/lock-free-static"
homepage = "https://gitlab.com/agerasev/lock-free-static"
repository = "https://gitlab.com/agerasev/lock-free-static.git"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["lock-free", "static", "lazy", "once"]
categories = ["concurrency", "data-structures", "no-std"]
